--- a/src/components/GalleryItem/GalleryItem.css
+++ b/src/components/GalleryItem/GalleryItem.css
@@ -1,33 +1,42 @@
 img {
   width: 400px;
   height: 400px;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 5px;
 }
 
 .imageDiv {
   width: 400px;
   height: 400px;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 5px;
 }
 
 .description, .title{
     font-size: 25px;
-    font-family: fantasy;
 }
 
-button {
-  width: 85px;
-  height: 35px;
+.likesText {
+  font-size: 18px;
+}
+
+.title {
+  font-weight: bold;
 }
 
 .picture {
   display: flex;
+  width: 500px;
+  height: 500px;
+  margin-bottom: 20px;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: space-around;
-  flex: 1;
+}
+
+.title {
+  margin-bottom: 5px;
+}
+
+.imageInfo {
+  display: flex;
+  width: 400px;
+  justify-content: space-between;
+  align-items: center;
 }
