--- a/src/components/GalleryList/GalleryList.css
+++ b/src/components/GalleryList/GalleryList.css
@@ -2,4 +2,6 @@
     display: flex;
     justify-content: space-between;
     flex-flow: wrap;
+    margin-top: 40px;
+    background-color: #eeffee;
 }
